--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
 
             .link-icon {
                 margin-left: 5px;
+                margin-right: 5px;
             }
 
             .link-arrow {
@@ -219,6 +220,7 @@
 
                 .link-icon {
                     margin-left: 5px;
+                    margin-right: 5px;
                 }
 
                 .link-arrow {
