--- a/index.html
+++ b/index.html
@@ -152,10 +152,30 @@
             justify-content: center;
             align-items: center;
             margin-left: 20px;
-            font-size: 20px;
+            font-size: 22px;
             flex-shrink: 0;
             color: white;
+            /* NEW */
+            box-shadow: 0 6px 15px rgba(0, 0, 0, 0.25);
+            border: 2px solid rgba(255, 255, 255, 0.4);
+            backdrop-filter: blur(4px);
+            transition: all 0.3s ease;
         }
+
+        .link-item:hover .link-icon {
+            transform: scale(1.1) rotate(-5deg);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.35);
+        }
+
+        .link-icon::after {
+            content: "";
+            position: absolute;
+            inset: 0;
+            border-radius: 50%;
+            background: radial-gradient( circle at top left, rgba(255, 255, 255, 0.45), transparent 60% );
+        }
+
+
 
         .website .link-icon {
             background: linear-gradient(135deg, #3498db, #2980b9);
@@ -168,6 +188,14 @@
         .whatsapp .link-icon {
             background: linear-gradient(135deg, #25D366, #128C7E);
         }
+        .email .link-icon {
+            background: linear-gradient(135deg, #D44638, #B23121);
+        }
+
+        .tiktok .link-icon {
+            background: linear-gradient(135deg, #000000, #444444);
+        }
+
 
         .link-content {
             text-align: right;
@@ -253,7 +281,7 @@
                     <h3 class="link-title">الموقع الإلكتروني</h3>
                     <p class="link-desc">زوروا موقعنا للحجز للتعرف على خدماتنا</p>
                 </div>
-                <div class="link-icon"><i class="fas fa-globe"></i></div>
+                <div class="link-icon"><i class="fa-solid fa-globe"></i></div>
                 <div class="link-arrow"><i class="fas fa-arrow-left"></i></div>
             </a>
 
@@ -262,7 +290,7 @@
                     <h3 class="link-title">صفحة الفيسبوك</h3>
                     <p class="link-desc">تابعونا على فيسبوك لمعرفة آخر التحديثات والعروض</p>
                 </div>
-                <div class="link-icon"><i class="fab fa-facebook-f"></i></div>
+                <div class="link-icon"><i class="fa-brands fa-facebook-f"></i></div>
                 <div class="link-arrow"><i class="fas fa-arrow-left"></i></div>
             </a>
 
@@ -271,7 +299,25 @@
                     <h3 class="link-title">الواتساب</h3>
                     <p class="link-desc">تواصلوا معنا عبر الواتساب للاستفسارات والخدمات</p>
                 </div>
-                <div class="link-icon"><i class="fab fa-whatsapp"></i></div>
+                <div class="link-icon"><i class="fa-brands fa-whatsapp"></i></div>
+                <div class="link-arrow"><i class="fas fa-arrow-left"></i></div>
+            </a>
+
+            <a href="https://www.tiktok.com/@international_college?_r=1&_t=ZS-93O5OMy7HdK" target="_blank" class="link-item tiktok">
+                <div class="link-content">
+                    <h3 class="link-title">تيك توك</h3>
+                    <p class="link-desc">شاهدوا أحدث الفيديوهات التعليمية على تيك توك</p>
+                </div>
+                <div class="link-icon"><i class="fa-brands fa-tiktok"></i></div>
+                <div class="link-arrow"><i class="fas fa-arrow-left"></i></div>
+            </a>
+
+            <a href="mailto:info@inteltcollege.ly" class="link-item email">
+                <div class="link-content">
+                    <h3 class="link-title">البريد الإلكتروني</h3>
+                    <p class="link-desc">راسلونا عبر البريد الإلكتروني لأي استفسار رسمي</p>
+                </div>
+                <div class="link-icon"><i class="fa-solid fa-envelope"></i></div>
                 <div class="link-arrow"><i class="fas fa-arrow-left"></i></div>
             </a>
 
