--- a/index.html
+++ b/index.html
@@ -287,7 +287,16 @@
 
             <a href="https://www.facebook.com/IntlLanguageCollegeLibya/" target="_blank" class="link-item facebook">
                 <div class="link-content">
-                    <h3 class="link-title">صفحة الفيسبوك</h3>
+                    <h3 class="link-title">صفحة الفيسبوك - فرع الرئيسي</h3>
+                    <p class="link-desc">تابعونا على فيسبوك لمعرفة آخر التحديثات والعروض</p>
+                </div>
+                <div class="link-icon"><i class="fa-brands fa-facebook-f"></i></div>
+                <div class="link-arrow"><i class="fas fa-arrow-left"></i></div>
+            </a>
+
+                        <a href="https://www.facebook.com/share/17x697UK4f/?mibextid=wwXIfr" target="_blank" class="link-item facebook">
+                <div class="link-content">
+                    <h3 class="link-title">صفحة الفيسبوك - فرع حي الأندلس</h3>
                     <p class="link-desc">تابعونا على فيسبوك لمعرفة آخر التحديثات والعروض</p>
                 </div>
                 <div class="link-icon"><i class="fa-brands fa-facebook-f"></i></div>
@@ -326,3 +335,4 @@
 
 </body>
 </html>
+
